todo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: project-1      # 👈 tu jo namespace banaya hai
  labels:
    app: todo
spec:
  replicas: 2               # kitne pods chahiye
  selector:
    matchLabels:
      app: todo             # ye selector niche template ke label se match karega
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: todo-container
        image: rohit20000/front-todo:latest   # 🟢 apna docker image
        ports:
        - containerPort: 80               # jo app use karta hai
