nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: project-1
spec:
  selector:
    app: ngi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
